--- a/01 C++书写HelloWorld.vcxproj.filters
+++ b/01 C++书写HelloWorld.vcxproj.filters
@@ -132,6 +132,27 @@
     <ClCompile Include="52 一维数组-数组名.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="53 一维数组案例-五只小猪称体重.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="54 一维数组-数组元素逆置.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="55 一维数组-冒泡排序.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="56 二维数组.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="57 二维数组-数组名.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="58 二维数据-考试成绩统计.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="61 函数.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="00 笔记.md">
